# AIPC

./: .gitignore  README.md  README_ZH.md  alembic.ini  api_demo.py  gallerydata.py  main.py  pyproject.toml  requirements.txt  web_demo.py  windows_demo.py
.devcontainer/: devcontainer.json
alembic/: env.py
apis/: protocol.py
apis/db/: database.py
apis/db_models/: model.py
apis/llms/: llm_xpu.py
components/: examples_view.py  gallery_view.py  left_navigation_menu.py
configs/: base_config.py  example.yaml  model_config.py
configs/templates/: chatglm3.jinja
core/: __init__.py  function_map.py
core/build_charts/: format_echarts.py
core/build_tools/: format_tools.py  utils.py
core/decorator/: class_decorator.py
core/function_call/: build_function_call_pipline.py
llms/: __init__.py
llms/chatglm3/: __init__.py  client.py  code_interpreter.py  conversation.py  generate.py  prompt_template.py  tools_json_scema.py  utils.py
llms/qwen/: qwen_function_calling.py
retriever/: __init__.py  build_retriever.py  utils.py
server/: __init__.py  chat.py  common.py  protocol.py
server/agent/: aligned.py  react.py  registry.py
server/api/: app.py  protocol.py
server/chat/: vllm_engine.py
server/data/: __init__.py  formatter.py  preprocess.py  template.py  utils.py
server/extras/: misc.py  packages.py
server/model/: chat_model.py  embed_model.py  (+1 more)
test/: decoder.py  demo.json  demo.py  echarts_builder.py  embedding_test.py
tools/: README.md
utils/: collect_tools.py
views/: style_const.py
web_server/: __init__.py  utils.py  web_demo.py
(+35 files in other folders)
