[tool.poetry]
name = "aipc"
version = "0.1.0"
description = ""
authors = ["MrBun"]
license = "Apache-2.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.24.1"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
